feature(header): header mobile

--- a/src/assets/styles/utilities/_variables.scss
+++ b/src/assets/styles/utilities/_variables.scss
@@ -1,7 +1,7 @@
 // Colores principales
 $color-primario: #8B5C56; // Un tono marrón cálido que evoca la madera
 $color-secundario: #F4EDE4; // Un beige claro para contrastes suaves
-$color-acento: #DAA588; // Un tono terracota para resaltar elementos clave
+$color-acento: #fcd1ba; // Un tono terracota para resaltar elementos clave
 
 // Colores adicionales
 $color-fondo: #FBF8F1; // Un color de fondo claro para facilitar la lectura
