--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<div class="bg h-full">
-  <div class="container flex flex-align-center flex-justify-center">
-    <div class="title">Sitio en construcción</div>
-  </div>
-  
-</div>
+<app-header></app-header>
