--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -20,14 +20,24 @@
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
+}
+
+
+ul{
+  list-style: none;
+  li{
+    display: inline;
+    a{
+      text-decoration: none;
+      color: #000000;
+    }
+  }
 }
 
 html{
   font-size: 10px;
-}
-
-html,body{
-  height:100%;
+  scroll-behavior: smooth;
 }
 
 .container {
@@ -35,11 +45,16 @@ html,body{
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 1.7rem;
-  height:100%;
+}
+
+img {
+  width: 100%;
+  max-width: 100%;
 }
 
 section{
   padding: 1.7rem 0;
+  overflow: hidden;
 }
 
 /*
